--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"username": "work.sharique@gmail.com",
-	"password": "Shaan@123"
+	"username": "***********@gmail.com",
+	"password": "*******"
 }
